<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuizFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/quiz_header"
            style="@style/PlanetSignTextViewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="question.."
            />

        <TextView
            android:id="@+id/mercury"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/mercury"/>

        <TextView
            android:id="@+id/venus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/venus"/>

        <TextView
            android:id="@+id/earth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/earth"/>

        <TextView
            android:id="@+id/mars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/mars"/>

        <TextView
            android:id="@+id/jupiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/jupiter"/>

        <TextView
            android:id="@+id/saturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/saturn"/>

        <TextView
            android:id="@+id/uranus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/uranus"/>

        <TextView
            android:id="@+id/neptune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/neptune"/>

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AnswerText"
            tools:text="answer is ...">

        </TextView>

    </LinearLayout>
</ScrollView>