<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuizListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            style="@style/PlanetSignTextViewHeader"
            android:text="@string/quiz_header"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />
        <TextView
            android:id="@+id/quiz1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/quiz1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />
        <TextView
            android:id="@+id/quiz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/quiz2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />
        <TextView
            android:id="@+id/quiz3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlanetSignTextView"
            android:text="@string/quiz3"/>
    </LinearLayout>

</ScrollView>